# FantasmagorieRust

./: .gitignore  Cargo.toml  README.md  bench_results.json  build.json  build.rs  build_err.txt  build_errors.txt  build_log.txt  cargo_check.out  check.bat  check_all.bat  check_build.py  check_error.txt  check_errors.py  check_errors.txt  check_out.txt  check_output.txt  check_tmp.txt  dna_database.json  err.txt  final_errors.txt  fix_backend.py  fix_builders.py  fix_lifetimes.py  full_check.py  full_errors.txt  refactor_backend_v2.py  test_python.py  theme_errors.txt  tuning_history.json
.tracea/doctor/: env_report.json
assets/: neutral.cube
crates/fantasmagorie/: Cargo.toml
crates/fantasmagorie/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
docs/: ARCHITECTURE.md  GAME_SYSTEM.md  UI_SYSTEM.md  semantic_contracts.md
examples/: advanced_2d_demo.rs  animation_demo.rs  audio_demo.rs  bench_perf.rs  benchmark_stress_test.rs  breakout_demo.rs  cinema_playground.rs  design_demo.rs  dx12_demo.rs  editor_essentials.rs  evolution_showcase.rs  fantasmagorie.py  feature_test.py  game_demo.rs  game_loop_demo.rs  gameplay_demo.rs  ghost_inspector_demo.rs  hierarchy_demo.rs  ik_demo.rs  input_demo.rs  interaction_demo.rs  jfa_demo.rs  metal_cinematic_demo.rs  metal_demo.rs  minimal.rs  node_demo.rs  node_editor.rs  parallax_demo.rs  particle_demo.rs  phase3_demo.py  physics_demo.rs  prefab_demo.rs  renderer_v1_demo.rs  renderer_v2_demo.rs  serialization_demo.rs  skeletal_blend_demo.rs  ssr_demo.rs  theme_demo.rs  tilemap_demo.rs  tracea_blur_test.rs  (+14 more)
src/: audio.rs  config.rs  lib.rs
src/animation/: groups.rs  ik.rs  keyframe.rs  mod.rs  skeleton.rs  spring.rs
src/audio/: mod.rs
src/backend/: dx12.rs  dx12_old.rs.bak  dx12_shader.hlsl  mod.rs  motion_blur.wgsl  opengl.rs  vulkan.rs  vulkan.rs.bak  vulkan.wgsl  vulkan_shader.glsl  wgpu.rs  wgpu_shader.wgsl
src/backend/dx12/: mod.rs  pipelines.rs  resources.rs
src/backend/hal/: mod.rs
src/backend/metal/: builtin.rs  metalfx.rs  mod.rs  pipeline_provider.rs  resource_provider.rs
src/backend/shaders/: blend.wgsl  blur.glsl  culling.metal  culling.wgsl  dof.metal  dof.wgsl  flare.metal  flare.wgsl  fragment.glsl  fsr_easu.wgsl  fsr_rcas.wgsl  jfa.wgsl  k12_audio.wgsl  k13_indirect.wgsl  k4_resolver.wgsl  k5_jfa.wgsl  k5_resolve.wgsl  k6_particle.wgsl  k8_visibility.wgsl  metal_blur.metal  metal_shader.metal  mod.rs  motion_blur.metal  particles.metal  particles.wgsl  post.metal  post_process.wgsl  seed.wgsl  skinned.wgsl  ssr.metal  ssr.wgsl  ssr_compute.wgsl  stub.wgsl  taa.wgsl  types.rs  vertex.glsl  wgpu_blit.wgsl  wgpu_bloom.wgsl  wgpu_blur.wgsl  wgpu_fxaa.wgsl  (+4 more)
src/backend/vulkan/: backend.rs  context.rs  mod.rs  pipeline_provider.rs  pipelines.rs  resource_provider.rs  resources.rs  swapchain.rs  wrappers.rs
src/backend/wgpu/: compute.rs  mod.rs  passes.rs  pipeline_provider.rs  pipelines.rs  profiler.rs  resource_provider.rs  resources.rs  tracea.rs
src/core/: a11y.rs  arena.rs  context.rs  gesture.rs  i18n.rs  id.rs  marquee.rs  mobile.rs  mod.rs  persistence.rs  resource.rs  snapping.rs  state.rs  theme.rs  time.rs  types.rs  undo.rs  util.rs  wire.rs
src/devtools/: inspector.rs  mod.rs  plugin.rs  profiler.rs
src/draw/: blend.rs  drawlist.rs  mod.rs  path.rs
src/game/: animation.rs  audio.rs  camera.rs  hierarchy.rs  input.rs  interaction.rs  mod.rs  parallax.rs  particles.rs  physics.rs  prefab.rs  scene.rs  signals.rs  spatial.rs  sprite.rs  state_machine.rs  tilemap.rs  world.rs
src/input/: action_map.rs  manager.rs  mod.rs  types.rs
src/python/: bindings.rs  buffer.rs  dlpack.rs  grading_demo.py  mod.rs  plot_demo.py  scene3d_demo.py  test_ui.py  window.rs
src/python/bindings/: app.rs  context.rs  layout.rs  mod.rs  types.rs  widgets.rs
src/renderer/: api.rs  camera.rs  draw_builder.rs  frame.rs  graph.rs  layer.rs  lut.rs  material.rs  mod.rs  orchestrator.rs  packet.rs  types.rs
src/renderer/gpu/: audio.rs  indirect.rs  jitter.rs  mod.rs  particle.rs  profiler.rs  resolver.rs  sdf.rs  visibility.rs
src/renderer/nodes/: bloom.rs  blur.rs  dof.rs  flare.rs  fxaa.rs  geometry.rs  jfa.rs  lighting.rs  mod.rs  motion_blur.rs  particles.rs  post.rs  postprocess.rs  ssr.rs  taa.rs  upscale.rs
src/resource/: mod.rs  vfs.rs
src/text/: atlas.rs  markdown.rs  math.rs  mod.rs
src/tracea/: mod.rs
src/tracea/backend/: cuda.rs  mod.rs
src/tracea/benches/: metal_attention.rs  metal_gemm.rs
src/tracea/core/: backend.rs  cache.rs  config.rs  graph.rs  mod.rs  op.rs  tuning.rs
src/tracea/doctor/: capabilities.rs  diagnosis.rs  engine.rs  mod.rs  profiler.rs  registry.rs  strategies.rs  telemetry.rs  visualizer.rs
src/tracea/emitter/: attention.rs  conv.rs  conv_transpose.rs  cpu.rs  cuda.rs  cuda_low_rank.rs  driver.rs  elementwise.rs  gemm.rs  jit.rs  macros.rs  metal.rs  mod.rs  rocm.rs  rocm_driver.rs  rocm_jit.rs  traits.rs  universal.rs  vulkan.rs
src/tracea/interface/: c_bindings.rs  cpp.rs  mod.rs  nn.rs  python.rs
src/tracea/kernels/: mod.rs
src/tracea/optimized/: config.rs  mod.rs
src/tracea/optimizer/: benchmark.rs  cache.rs  heroscope.rs  history.rs  mod.rs  orchestrator.rs  policy.rs  problem.rs  semantic.rs
src/tracea/policy/: engine.rs  standard.rs  types.rs
src/tracea_bridge/: audio.rs  blur.rs  context.rs  fft.rs  indirect.rs  interop.rs  jfa.rs  mod.rs  neural.rs  particles.rs  resolve.rs  sph.rs  visibility.rs
src/view/: animation.rs  curves.rs  gizmo.rs  grid.rs  header.rs  interaction.rs  layout.rs  mod.rs  plot.rs  renderer.rs  ruler.rs  scene3d.rs  views.rs
src/widgets/: canvas.rs  checkbox.rs  collapsible.rs  context_menu.rs  curves.rs  dragger.rs  dropdown.rs  fader.rs  gizmo.rs  grid.rs  inspector.rs  knob.rs  layout_grid.rs  math.rs  micro_interactions.rs  mod.rs  node.rs  plot.rs  prelude.rs  radio.rs  ruler.rs  scene3d.rs  splitter.rs  toggle.rs  virtual_list.rs
tests/: test_persistence.rs  test_plotting.rs  test_virtualization.rs
tests/python/: test_dlpack.py  test_multi_window.py
tracea/: Cargo.toml
(+82 files in other folders)
