[package]
name = "fantasmagorie"
version = "0.1.0"
edition = "2021"
description = "Fantasmagorie V5 Crystal - High-performance stateless UI framework"

[workspace]
members = ["src/tracea"]
license = "MIT"

[lib]
name = "fanta_rust"
crate-type = ["cdylib", "rlib"]  # Python extension + Rust library

[features]
default = ["opengl"]
opengl = ["glow", "glutin", "glutin-winit", "raw-window-handle"]
wgpu = ["dep:wgpu"]
metal = ["dep:metal", "dep:objc", "dep:block", "dep:naga", "dep:cocoa"]
python = ["pyo3", "tracea/python"]
cpp = []

[dependencies]
# Core
bumpalo = "3.14"
hashbrown = "0.14"
bitflags = "2.4"
safetensors = "0.3"
memmap2 = "0.9"


# Font rendering
fontdue = "0.8"

# OpenGL backend (default)
glow = { version = "0.13", optional = true }
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# wgpu backend (optional)
wgpu = { version = "0.19", optional = true }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }
cocoa = { version = "0.25", optional = true }

# Windowing
winit = "0.29"

# Python bindings (optional)
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
image = "0.24"
pulldown-cmark = "0.10"
naga = { version = "0.19", features = ["glsl-in", "wgsl-in", "spv-out", "hlsl-out"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Tracea Dependencies
# Tracea Dependency
tracea = { path = "./src/tracea", default-features = false }

cpal = "0.15"
realfft = "3.3"
log = "0.4"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
image = "0.24"

[[example]]
name = "visual_demo"
path = "examples/visual_demo.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
